2012-06-04  Sadrul Habib Chowdhury  <sadrul@chromium.org>

        [chromium] Fix software rendering for device-scale-factor > 1
        https://bugs.webkit.org/show_bug.cgi?id=88136

        Reviewed by Darin Fisher.

        * fast/hidpi/device-scale-factor-paint.html: Added.
        * platform/chromium/fast/hidpi/device-scale-factor-paint-expected.html: Added.

2012-06-04  Ami Fischman  <fischman@chromium.org>

        [Gtk] http/tests/media/video-buffered.html is failing after r119268
        https://bugs.webkit.org/show_bug.cgi?id=88138

        Reviewed by Eric Carlson.

        * http/tests/media/video-buffered.html:

2012-06-04  Aaron Colwell  <acolwell@chromium.org>

        Speed up video-media-source-play & video-media-source-seek LayoutTests.
        https://bugs.webkit.org/show_bug.cgi?id=87986

        Reviewed by Eric Carlson.

        * http/tests/media/media-source/video-media-source-play.html: Updated test to only play 1 second of media data instead of ~3 seconds.
        * http/tests/media/media-source/video-media-source-seek-expected.txt:
        * http/tests/media/media-source/video-media-source-seek.html:
            - Triggers seek after playing 0.5 seconds instead of 2 seconds.
            - Seeks to the last segment instead of a segment that is ~2 seconds from the end.
            - Added an webkitSourceAbort() call before appending the segments for the seek. This is to prevent this test from failing
              when the old v0.3 "flush on seek" behavior is removed from the Chromium code.

2012-06-04  Abhishek Arya  <inferno@chromium.org>

        Crash in multi-column layout.
        https://bugs.webkit.org/show_bug.cgi?id=88022

        Reviewed by Ojan Vafai.

        * fast/multicol/span/empty-anonymous-block-split-crash-expected.txt: Added.
        * fast/multicol/span/empty-anonymous-block-split-crash.html: Added.
        * fast/multicol/span/positioned-objects-not-removed-crash-expected.txt: Added.