@@ -1,3 +1,15 @@
+2012-06-04  Ami Fischman  <fischman@chromium.org>
+
+        Don't crash when re-parenting a removed HTMLMediaElement
+        https://bugs.webkit.org/show_bug.cgi?id=88058
+
+        Reviewed by Eric Carlson.
+
+        Test: media/media-reparent.html
+
+        * html/HTMLMediaElement.cpp:
+        (WebCore::HTMLMediaElement::userCancelledLoad): Clear the pending load flags because any pending load has been cancelled.
+
 2012-06-04  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r119421 and r119425.
